Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,15 @@ footer {
 }
 main {
     max-width:80%;
+    padding: 0;
     margin:0 auto;
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+    
+    padding:1em 0;
 }
 footer p {
     margin:0.2em 0;
